--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,18 +14,18 @@
     </div>
 
     <div class="panel-body">
-      <button type="submit" (click)="addUser(subject.name)" class="btn btn-sm btn-primary">POST SUBJECTS</button>
+      <button type="submit" (click)="addUser(subject.name)" class="btn btn-sm btn-primary">POST SUBJECT</button>
       <button class="btn btn-sm btn-primary" (click)="getUsers()">GET SUBJECTS</button>
-      <button class="btn btn-sm btn-primary" (click)="deleteUser(+number.value)">DELETE SUBJECTS</button>
-      <button class="btn btn-sm btn-primary" (click)="putUser(subject.name, +number.value)">UPDATE SUBJECTS</button>
-      <button class="btn btn-sm btn-primary" (click)="getUser(+number.value)">GET SUBJECTS</button>
+      <button class="btn btn-sm btn-primary" (click)="deleteUser(+number.value)">DELETE SUBJECT</button>
+      <button class="btn btn-sm btn-primary" (click)="putUser(subject.name, +number.value)">UPDATE SUBJECT</button>
+      <button class="btn btn-sm btn-primary" (click)="getUser(+number.value)">GET SUBJECT</button>
     </div>
   </form>
 
   <div class="small-hint">
     <small>
-      below you can see the result <br>
-      to get started, get all the data (GET SUBJECTS)
+      to get started, get all the data 'GET SUBJECTS' <br>
+      enter a number in the second field and use the buttons, to see the result use 'GET SUBJECTS'
     </small>
   </div>
 
