--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,11 +14,11 @@
     </div>
 
     <div class="panel-body">
-      <button type="submit" (click)="addUser(subject.name)" class="btn btn-sm btn-primary">POST SUBJECT</button>
-      <button class="btn btn-sm btn-primary" (click)="getUsers()">GET SUBJECTS</button>
-      <button class="btn btn-sm btn-primary" (click)="deleteUser(number.value)">DELETE SUBJECT</button>
-      <button class="btn btn-sm btn-primary" (click)="putUser(subject.name, number.value)">UPDATE SUBJECT</button>
-      <button class="btn btn-sm btn-primary" (click)="getUser(number.value)">GET SUBJECT</button>
+      <button type="submit" (click)="addSubject(subject.name)" class="btn btn-sm btn-primary">POST SUBJECT</button>
+      <button class="btn btn-sm btn-primary" (click)="getSubjects()">GET SUBJECTS</button>
+      <button class="btn btn-sm btn-primary" (click)="deleteSubject(number.value)">DELETE SUBJECT</button>
+      <button class="btn btn-sm btn-primary" (click)="putSubject(subject.name, number.value)">UPDATE SUBJECT</button>
+      <button class="btn btn-sm btn-primary" (click)="getSubject(number.value)">GET SUBJECT</button>
     </div>
   </form>
 
